# capy-quest

./: .gitignore  CMakeLists.txt  README.md
assets/: gamecontrollerdb.txt
docs/: DESIGN.md  README.md  TODOS.md
src/: aesprite.c  arena.c  arena.h  aseprite.c  aseprite.h  entity.c  entity.h  fs.c  fs.h  game.c  game.h  gfx.c  gfx.h  main.c  std.h  str.c  str.h  util.h
src/engine/: arena.c  arena.h  aseprite.c  aseprite.h  engine.h  entity.c  entity.h  fs.c  fs.h  gfx.c  gfx.h  str.c  str.h
src/game/: behaviours.h  entities.h
src/game/behaviours/: controllable.c  controllable.h
src/game/entities/: coin.c  coin.h  player.c  player.h  wall.c  wall.h
src/std/: arena.c  arena.h  aseprite.c  aseprite.h  entity.c  entity.h  fs.c  fs.h  gfx.c  gfx.h  str.c  str.h  util.h
